[package]
name = "solana-shadow"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Karim Agha <karim.dev@gmail.com>"]
description = "Synchronized shadow state of Solana programs available for off-chain processing."
keywords = ["blockchain", "solana", "web3"]
homepage = "https://github.com/karim-agha/solana-shadow"
repository = "https://github.com/karim-agha/solana-shadow"
edition = "2018"
include = ["examples/**/*", "src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
bs58 = "0.4"
borsh = "0.9"
dashmap = "4.0.2"
thiserror = "1"
futures = "0.3"
tracing = "0.1.28"
base64 = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
borsh-derive = "0.9"
hyper-tls = "0.5.0"
solana-sdk = "1.7.12"
solana-client = "1.7.12"
tokio = { version = "1.12", features = ["full"] }
tokio-tungstenite = { version = "0.15", features = ["native-tls"] }

[dev-dependencies]
anyhow = "1"
rand = "0.8"
pyth-client = "0.2.2"
tracing-subscriber = "0.2"